main_svc: orc work